Fixed broken CSS on workspace detail page.
git-svn-id: http://svn.geogr.uni-jena.de/svn/jams/trunk@3331 cee23a32-52fb-0310-bcb1-fe94ad5b3aa2

--- a/JAMSWebClient/src/views/workspaces/show/show.css
+++ b/JAMSWebClient/src/views/workspaces/show/show.css
@@ -1,3 +1,7 @@
-.files {
+.workspace-files {
 	margin-top: 1rem;
+}
+
+.workspace-file-list-item {
+	display: block;
 }
